Bug 168363 - CRASH: pasting to Master Hangout
Summary: CRASH: pasting to Master Hangout
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Xisco Faulí
URL:
Whiteboard: target:26.2.0 target:25.8.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-09-11 14:56 UTC by Xisco Faulí
Modified: 2025-09-17 16:55 UTC (History)
1 user (show)

See Also:
Crash report or crash signature: ["sd::View::InsertData(TransferableDataHelper const &,Point const &,signed char &,bool,SotClipboardFormatId,unsigned short,o3tl::strong_int<short,SdrLayerIDTag>)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2025-09-11 14:56:04 UTC
Steps to reproduce:
1. Open Writer
2. Type something
3. Copy
4. Open Impress
5. View - Master Hangout
6. Paste

Reproduced in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 2827bd9e46b697641ddbfac0e698ba67c3965202
CPU threads: 8; OS: Linux 6.1; UI render: default; VCL: gtk3
Locale: es-ES (es_ES.UTF-8); UI: en-US
Calc: threaded
Comment 1 Xisco Faulí 2025-09-11 14:56:47 UTC
Regression after 

commit 7dddd449068d69ec2f47bfca2487f01fa7067fd0	[log]
author	Pranam Lashkari <lpranam@collabora.com>	Tue Apr 15 21:19:43 2025 +0530
committer	Caolán McNamara <caolan.mcnamara@collabora.com>	Thu Apr 17 10:04:58 2025 +0200
tree cdfa4890202ddfb972ac337903dc41bcd8666194
parent 53d9f2712f6e447240d67538f9890030e2e4e27f [diff]

sd: copy slides from instance to another
Comment 2 Commit Notification 2025-09-11 18:14:04 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/fd10eb45fdb95f2fc3386ef7ee1423279d764ac3

tdf#168363: check SlideSorterViewShell

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2025-09-17 16:55:16 UTC
Xisco Fauli committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/6b8479d71863b015d0d8bcbd292791f07857b2fa

tdf#168363: check SlideSorterViewShell

It will be available in 25.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.