tdf#168363: check SlideSorterViewShell

After
commit 7dddd449068d69ec2f47bfca2487f01fa7067fd0
Author: Pranam Lashkari <lpranam@collabora.com>
Date:   Tue Apr 15 21:19:43 2025 +0530

    sd: copy slides from instance to another

Change-Id: I77a315981c0178144c985b29b4ebb733e42bd000
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190820
Tested-by: Jenkins
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>
(cherry picked from commit fd10eb45fdb95f2fc3386ef7ee1423279d764ac3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190824
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>